--- a/chingoal/discussion/templates/discussion/chat_base.html
+++ b/chingoal/discussion/templates/discussion/chat_base.html
@@ -45,7 +45,7 @@
 
     </div> <!-- /container -->
 
-    <script src="../static/js/jquery-1.11.2.js" type="text/javascript"></script>
+    <script src="/../static/js/jquery-1.11.2.js" type="text/javascript"></script>
   	{% block js %}{% endblock %}
   </body>
 </html>
