--- a/chingoal/discussion/templates/discussion/index.html
+++ b/chingoal/discussion/templates/discussion/index.html
@@ -1,24 +1,94 @@
-{% extends "discussion/chat_base.html" %}
+{% extends "base.html" %}
 
-{% block nav-left %}
-	<ul class="nav navbar-nav">
-		<li class="active"><a href="#">首页</a></li>
-		<li class="disabled"><a>聊天室</a></li>
-	</ul>
-{% endblock %}
+    {% block title-content %}
+    <title>Chatroom</title>
+    {% endblock %}
+    {% block head %}
+    {% load static %}
+    <link href="{% static "css/custom_discussion_board.css"%}" rel="stylesheet">    {% endblock %}
+    {% block head-origin %}
+    {% endblock %}
+    
+    
+{% block main-content %}
+ {% csrf_token %}
+   <nav class="navbar navbar-default navbar-fixed-top">
+        <div class="container">
+            <div class="navbar-header page-scroll">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand page-scroll" href="#page-top">Chingoal</a>
+            </div>
 
-{% block content %}
-	<div id="home">
-		<div class="page-header">
-		<h1>{{ username }},欢迎来到聊天室!</h1>
-		<h3>全部房间</h3>
-		</div>
-        {% if flag == 1 %}<a href="{% url 'createRoom' username %}">Create a new room</a>{% endif %}
+            <!~~ Collect the nav links, forms, and other content for toggling ~~>
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav navbar-right">
+                    <li class="hidden">
+                        <a href="#page-top"></a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="{% url 'dashboard' %}">Lessons</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="{% url 'discussion_home' %}">Discussion</a>
+                    </li>
+                    {% if flag == 1 %}
+                     <li>
+                           <a href="{% url 'testcreate' %}">Create Test</a>                   
+                    </li>   
+                    {% else %}
+                    
+                    <li>
+                    <a class="page-scroll" href="{% url 'store' %}">Store</a> 
+                        </li>
+                                      
+                    {% endif %}
+                    <li class="dropdown">
+                    <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+                             <i class="fa fa-user fa-fw"></i>  <i class="fa fa-caret-down"></i>
+                    </a>
+                    <ul class="dropdown-menu dropdown-user">
+                        <li><a href="{% url 'viewProfile' username %}"><i class="fa fa-user fa-fw"></i> User Profile</a>
+                        </li>
+                        <li><a href="{% url 'editProfile' %}"><i class="fa fa-gear fa-fw"></i> Settings</a>
+                        </li>
+                        <li class="divider"></li>
+                        <li><a href="{% url 'logout' %}"><i class="fa fa-sign-out fa-fw"></i> Logout</a>
+                        </li>
+                    </ul>
+                    <!~~ /.dropdown-user ~~>
+                    </li>   
+                </ul>
+            </div>
+            <!~~ /.navbar-collapse ~~>
+        </div>
+        <!~~ /.container-fluid ~~>
+    </nav>
+
+	<section id="portfolio" class="bg-light-gray">
+		<h2 style="margin-left:70px;">{{ username }},welcome to chat rooms!</h2>
+    {% if flag == 1 %}
+        {% if error %}
+        <p>{{error}}</p>
+        {% endif %}
+        <form role="form" action="/discussion/createRoom" method="post">
+        <div style="margin-left:70px;">
+            <input type="text" name="roomname" spellcheck="false">
+            <input type="submit" value="Create a new room">
+        </div>
+        {% csrf_token %}
+        </form>        
+    {% endif %}
 		<table class="table table-striped">
 			<thead>
 				<tr>
-					<th>房间序号</th>
-					<th>房间名</th>
+					<th>Room number</th>
+					<th>Room name</th>
+					<th>Created by</th>
 				</tr>
 			</thead>
 			<tbody id="roomlist">
@@ -26,15 +96,45 @@
 					<tr>
 						<th>{{ item.id }}</th>
 						<th><a href="{% url 'room' item.id %}">{{ item }}</a></th>
-						<th><a href="/discussion/delete/"+{{item.id}}>X</a></th>
+						<th>{{item.owner}}</th>
+						<th><a href="{% url 'deleteRoom' item.id %}">X</a></th>
 					</tr>
 				{% endfor %}
 			</tbody>
 		</table>
-	</div>
-{% endblock %}
+	</section>
+	
+<footer>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4">
+                    <span class="copyright">Copyright &copy; Your Website 2014</span>
+                </div>
+                <div class="col-md-4">
+                    <ul class="list-inline social-buttons">
+                        <li><a href="http://www.twitter.com"><i class="fa fa-twitter"></i></a>
+                    </li>
+                    <li><a href="http://www.facebook.com"><i class="fa fa-facebook"></i></a>
+                    </li>
+                    <li><a href="http://www.linkedin.com"><i class="fa fa-linkedin"></i></a>
+                    </li>
+                    </ul>
+                </div>
+                <div class="col-md-4">
+                    <ul class="list-inline quicklinks">
+                        <li><a href="#">Privacy Policy</a>
+                        </li>
+                        <li><a href="#">Terms of Use</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </footer>
+    {% endblock %}    
+    
+<script src="/../static/js/jquery-1.11.2.js" type="text/javascript"></script>
 
-{% block js %}
 <script>
 function updaterooms() {
 		$.get("/discussion/update", function(data){
@@ -43,7 +143,7 @@ function updaterooms() {
             for (num in rooms) {
                 var room = rooms[num];
                 var html = '<tr><th>'+room.id+'</th><th><a href="/discussion/goRoom/'+room.id+'">'+room.roomname+'</a></th>\
-                <th><a href="/discussion/delete/'+room.id+'">X</a></th></tr>';
+                <th>'+room.owner+'</th><th><a href="/discussion/delete/'+room.id+'">X</a></th></tr>';
                 $('#roomlist').append(html);   
             }          
         });
@@ -53,5 +153,3 @@ $(document).ready(function () {
 });		
 
 </script>
-
-{% endblock %}
