--- a/chingoal/discussion/templates/discussion/room.html
+++ b/chingoal/discussion/templates/discussion/room.html
@@ -1,13 +1,16 @@
-{% extends "discussion/chat_base.html" %}
+<!DOCTYPE html>
+<html lang="zh-CN">
 
-{% block nav-left %}
+  <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>ChatRoom</title>
+  </head>
+  <body>
 	<ul class="nav navbar-nav" xmlns="http://www.w3.org/1999/html">
 		<li><button onclick="onbeforeunload_handler()">首页</button></li>
-		<li class="active"><a href="#">聊天室</a></li>
 	</ul>
-{% endblock %}
 
-{% block content %}
 	<div class="page-header">
 	<h3>当前房间: {{ roomObj.roomname }}</h3>
 	</div>
@@ -21,9 +24,8 @@
 	</div>
 		<textarea id="msg" style="border: 1px solid #000000;resize: none;margin-top: 20px;margin-left: -15px;width: 550px;height: 80px;"></textarea>
 		<button id="sendmsg" class="btn btn-success" style="width: 50px;height: 80px; margin-top: -71px;margin-left: -5px;font-size: 20px;border-radius: 0">发<br>送</button>
-{% endblock %}
 
-{% block js %}
+<script src="/../static/js/jquery-1.11.2.js" type="text/javascript"></script>
 	<script>
 
 		// using jQuery
@@ -144,5 +146,5 @@
 		}
 
 	</script>
-
-{% endblock %}
+</body>
+</html>
