--- a/chingoal/account/templates/account/view_profile.html
+++ b/chingoal/account/templates/account/view_profile.html
@@ -56,7 +56,7 @@
                     
                     <li class="dropdown">
                     <a class="dropdown-toggle" data-toggle="dropdown" href="#">
-                             <i class="fa fa-user fa-fw"></i>  <i class="fa fa-caret-down"></i>
+                             <i class="fa fa-user fa-fw"></i><i class="fa fa-caret-down"></i>
                     </a>
                     <ul class="dropdown-menu dropdown-user">
                         <li><a href="{% url 'viewProfile' cur_username %}"><i class="fa fa-user fa-fw"></i> User Profile</a>
@@ -71,7 +71,7 @@
                     </li> 
                     <li class="dropdown">
                     <a class="dropdown-toggle" data-toggle="dropdown" href="#">
-                             <i class="fa fa-envelope fa-fw"></i>  <i class="fa fa-caret-down"></i>
+                             <i class="fa fa-envelope fa-fw"></i><i id="newmsg"></i><i class="fa fa-caret-down"></i>
                     </a>
                     <ul class="dropdown-menu dropdown-user">
                         <li><a data-toggle="modal" data-target="#reply_box"><i class="fa fa-comment fa-fw"></i> User Profile</a>
@@ -164,7 +164,7 @@
     	<p class=" text-center">Leave your message:</p>
 			<form method="POST" action="{% url 'reply' username uid %}">
         		<span>
-        			<textarea id="textarea1" name="text" placeholder="leave your message here...(42 characters or less)"></textarea>
+        			<textarea id="textarea1" name="textarea1" required placeholder="leave your message here..."></textarea>
         		</span>
                     <input class="button1" type="submit" value="Leave Message" >
 					
@@ -347,7 +347,7 @@
                                            <div class="modal-body">
                                     <p>jwaiejfowajeo</p>
 									<p>wefiwjao</p>
-                                    <input type="text" style="width : 300px; ">
+                                    <input type="text" style="width : 300px;" required>
                                     <button type="submit" class="btn btn-primary btn-sm">Reply</button>
                                     		</div>
                                         </div>
