--- a/chingoal/chingoal/template/base.html
+++ b/chingoal/chingoal/template/base.html
@@ -13,7 +13,7 @@
 <script type="text/javascript">
     console.log("receive alert");
     ishout.on('alertchannel',function(data) {
-              alert(data.msg);
+              $("#newmsg").text(data.msg)
     });
     ishout.init();
 </script>
