--- a/chingoal/discussion/templates/discussion/index.html
+++ b/chingoal/discussion/templates/discussion/index.html
@@ -132,7 +132,7 @@
         </div>
     </footer>
     {% endblock %}    
-    
+ {% block script-content %}   
 <script src="/../static/js/jquery-1.11.2.js" type="text/javascript"></script>
 
 <script>
@@ -153,3 +153,4 @@ $(document).ready(function () {
 });		
 
 </script>
+{%endblock%}
