--- a/chingoal/chingoal/template/base.html
+++ b/chingoal/chingoal/template/base.html
@@ -11,8 +11,9 @@
     {% load drealtimetags %}
 {% ishout_js %}
 <script type="text/javascript">
-    console.log("receive alert");
+    
     ishout.on('alertchannel',function(data) {
+              console.log("receive alert");
               $("#newmsg").text(data.count);
               var list = $("#msglist");
               var html = '<li><a data-toggle="modal" data-target="#reply_box'+data.count+'">\
@@ -32,7 +33,7 @@
                                             <p>'+data.time+'</p> \
 									        <p>'+data.text+'</p> \
                                             <input type="text" name="textarea1" style="width : 300px;" required> \
-                                            <button type="submit" class="btn btn-primary btn-sm">Reply</button> \
+                                            <button type="submit" class="btn btn-primary btn-sm replyBtn">Reply</button> \
                                     	</div> \
                                     </div> \
                                 </div>\
