--- a/chingoal/testpage/templates/testpage/test.html
+++ b/chingoal/testpage/templates/testpage/test.html
@@ -68,134 +68,47 @@
     </nav>
 
 
-    <!-- Portfolio Grid Section -->
-    <section id="portfolio" class="bg-light-gray">      
-        <div id="page-wrapper">
-       <div class="row">
-            <br>
-            </div>
-            <div class="row">
-                <div class="col-lg-12">
-<!--                     <div class="panel panel-primary">
-                        <div class="panel-heading">
-                            Creating Test
-                        </div> -->
-                        <!-- <div class="panel-body"> -->
-                            <!-- <ul style="list-style: none;" id="question"> -->
+<!-- Portfolio Grid Section -->
+<section id="portfolio" class="bg-light-gray">      
+    <div id="page-wrapper">
+    <div class="row">
+    <br>
+    </div>
+    <div class="row">
+        <div class="col-lg-12">
 
-                                <!-- {% for item in question %} -->
+            <div class="panel panel-primary">                  
+                <div  id="phead" class="panel-heading">
+                    Question <p class="question-num" style="display:inline"></p> 
+                </div>
+                <div id="pbody" class="panel-body">
+    
+                </div>
 
-{% if item.qtype == "tr" %}
-<!-- <form action="{% url 'testsavetrquestion' id %}" method="post"> -->
-<div class="panel panel-primary">
-<div class="panel-heading">
-Question <p class="question-num" style="display:inline">{{item.id}}</p> (Word Translate)
-</div>
-<div class="panel-body">
-<div class="form-group">
-<div class="row">
-<div class="col-lg-12">{{item.question}}</div>
-</div>
-<br>
-<label>Input the answer content</label>
-<div class="row">
-{% if form.explanation.errors %}
-<div class="col-lg-8">{{form.explanation}}</div>
-<div class="col-lg-4" style="color:red">{{form.explanation.errors}}</div>
-{% else %}
-<div class="col-lg-12">{{form.explanation}}</div>
-{% endif %}
-</div>
-</div>            
-</div>
-<div class="panel-footer">
-<button type="button" class="btn btn-warning next-btn">Next</button>
-</div>
-</div>
-{% else %}
-<!-- <form action="{% url 'testsavemcquestion' id %}" method="post"> -->
-<div class="panel panel-primary">
-<div class="panel-heading">
-Question <p class="question-num" style="display:inline">{{item.id}}</p> (Multiple Choice)
-</div>
-<div class="panel-body">
-<div class="form-group">
-{{item.question}}
-</div>
-<div class="form-group input-group">
-<span class="input-group-addon">A</span>
-{{item.a}}
-</div>
 
-<div class="form-group input-group">
-<span class="input-group-addon">B</span>
-{{item.b}}
-</div>
-
-<div class="form-group input-group">
-<span class="input-group-addon">C</span>
-{{item.c}}
-</div>
-
-<div class="form-group input-group">
-<span class="input-group-addon">D</span>
-{{item.d}}
-</div>
-
-<label>Chooseing the correct answer</label>
-<label class="radio-inline">
-<input type="radio" name="optionsRadiosInline" id="optionsRadiosInline1" value="A" checked>A
-</label>
-<label class="radio-inline">
-<input type="radio" name="optionsRadiosInline" id="optionsRadiosInline2" value="B">B
-</label>
-<label class="radio-inline">
-<input type="radio" name="optionsRadiosInline" id="optionsRadiosInline3" value="C">C
-</label>
-<label class="radio-inline">
-<input type="radio" name="optionsRadiosInline" id="optionsRadiosInline3" value="D">D
-</label>
-<br>
-
-</div>
-<div class="panel-footer">
-<div class="row">
-<div class="col-lg-3">
-<button type="button" class="btn btn-warning next-btn">Next</button>
-</div>
-<div class="col-lg-6">
-<div class="progress">
-   <div class="progress-bar progress-bar-success progress-bar-striped active" role="progressbar" aria-valuenow="60" 
-      aria-valuemin="0" aria-valuemax="100" style="width: 100%;">
-      <span class="sr-only">40% 完成</span>
-   </div>
-</div>
-</div>
-<div class="col-lg-3"></div>
-</div>
-</div>
-</div>
-<!-- </form> -->
-{% endif %}
-
-                                <!-- {% endfor %} -->
-
-                           <!-- </ul>                              -->
-                        <!-- </div> -->
-<!--                         <div class="panel-footer">
-                            <div class="row">
-                                <div class="col-lg-4">
-                                <button id="posttest" type="button" class="btn btn-info btn-lg btn-block">Submit</button>
-                                </div>
+                <div id="pfoot" class="panel-footer">
+                    <div class="row">
+                        <div class="col-lg-3">
+                            <button type="button" class="btn btn-warning next-btn">Next</button>
+                        </div>
+                        <div class="col-lg-6">
+                            <div class="progress">
+                                <div id="processbar" class="progress-bar progress-bar-success progress-bar-striped active" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 0%;">0%</div>
                             </div>
-                            
-                        </div> -->
-                    <!-- </div> -->
+                        </div>
+                        <div class="col-lg-3"></div>
+                    </div>
+                </div>
+            </div>
+
+                               
+
                 </div>
                 <!-- /.col-lg-4 -->
             </div>
         </div>
-    </section>
+</section>
+
 
 
     <footer>
