--- a/chingoal/testpage/templates/testpage/test.html
+++ b/chingoal/testpage/templates/testpage/test.html
@@ -76,11 +76,17 @@
     </div>
     <div class="row">
         <div class="col-lg-12">
-
-            <div class="panel panel-primary">                  
+        
+            <div id="question-container" class="panel panel-primary">                  
                 <div  id="phead" class="panel-heading">
                     Question <p class="question-num" style="display:inline"></p> 
                 </div>
+                <form id="storedata" >
+                <input id="maxentry" type="hidden" name="max_entry" value="-1">
+                <input id="qnum" type="hidden" name="qnum" value="-1">
+                <input id="qid" type="hidden" name="qid" value="-1">
+                {% csrf_token %}
+                </form>
                 <div id="pbody" class="panel-body">
     
                 </div>
@@ -100,9 +106,7 @@
                     </div>
                 </div>
             </div>
-
-                               
-
+                
                 </div>
                 <!-- /.col-lg-4 -->
             </div>
