--- a/chingoal/discussion/templates/discussion/room.html
+++ b/chingoal/discussion/templates/discussion/room.html
@@ -131,7 +131,8 @@
 {% endblock %}
 
 {% block script-content %}
-<script src="/../static/js/jquery-2.1.4.min.js" type="text/javascript"></script>
-<script src="/../static/js/chat_room.js" type="text/javascript"></script>
+{% load static  %}
+<script src="{% static 'js/jquery-2.1.4.min.js' %}" type="text/javascript"></script>
+<script src="{% static 'js/chat_room.js' %}" type="text/javascript"></script>
 
 {% endblock %}
