--- a/chingoal/chingoal/template/base.html
+++ b/chingoal/chingoal/template/base.html
@@ -13,6 +13,7 @@
 <script type="text/javascript">
     ishout.on('alertchannel',function(data) {
 	      $("#newmsg").text(data.count);
+              $("#msgbar").css("color","red");
               var list = $("#msglist");
               var html = '<li><a data-toggle="modal" data-target="#reply_box'+data.msgid+'" style="color:red">\
                                 <i class="fa fa-comment fa-fw"></i>'+data.sender+'</a></li>';                                
