--- a/chingoal/discussion/templates/discussion/room.html
+++ b/chingoal/discussion/templates/discussion/room.html
@@ -62,7 +62,11 @@
                     </ul>
 					</li>
                     <li class="dropdown">
-                    <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+                        {% if hasnewmsg == 'no' %}
+                        <a class="dropdown-toggle" data-toggle="dropdown" href="#" id="msgbar">
+                            {% else %}
+                            <a class="dropdown-toggle" data-toggle="dropdown" href="#" id="msgbar" style="color:red">
+                                {% endif %}
                              <i class="fa fa-user fa-fw"></i>  <i class="fa fa-caret-down"></i>
                     </a>
                     <ul class="dropdown-menu dropdown-user">
