--- a/chingoal/store/templates/store/store.html
+++ b/chingoal/store/templates/store/store.html
@@ -43,7 +43,11 @@
                         <a class="page-scroll" href="#">Store</a>                       
                     </li>
                     <li class="dropdown">
-                        <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+                        {% if hasnewmsg == 'no' %}
+                        <a class="dropdown-toggle" data-toggle="dropdown" href="#" id="msgbar">
+                            {% else %}
+                            <a class="dropdown-toggle" data-toggle="dropdown" href="#" id="msgbar" style="color:red">
+                                {% endif %}
                             <i class="fa fa-envelope fa-fw"></i><i id="newmsg">{{msgcount}}</i><i class="fa fa-caret-down"></i>
                         </a>
                         <ul id="msglist" class="dropdown-menu dropdown-user">
