--- a/chingoal/discussion/templates/discussion/index.html
+++ b/chingoal/discussion/templates/discussion/index.html
@@ -55,12 +55,15 @@
                                 {% endif %}
                              <i class="fa fa-envelope fa-fw"></i><i id="newmsg">{{msgcount}}</i><i class="fa fa-caret-down"></i>
                     </a>
-                    <ul id="msglist" class="dropdown-menu dropdown-user">
-                        {% for msg in newmsgs %}
-                        <li><a data-toggle="modal" data-target="#reply_box{{ forloop.counter }}"><i class="fa fa-comment fa-fw"></i>{{msg.sender}}</a>
-                        </li>
-                        {% endfor %}
-                    </ul>
+                            <ul id="msglist" class="dropdown-menu dropdown-user">
+                                {% for msg in newmsgs %}
+                                <li>{% if msg.isReply %}<a data-toggle="modal" data-target="#reply_box{{ msg.id }}">
+                                    {% else %}<a data-toggle="modal" data-target="#reply_box{{ msg.id }}" style="color:red;">
+                                        {% endif %}
+                                        <i class="fa fa-comment fa-fw"></i>{{msg.sender}}</a>
+                                    </li>
+                                {% endfor %}
+                            </ul>
 					</li>
                     <li class="dropdown">
                     <a class="dropdown-toggle" data-toggle="dropdown" href="#">
@@ -109,10 +112,12 @@
 			<tbody id="roomlist">
 				{% for item in RoomObj %}
 					<tr>
-						<th>{{ item.id }}</th>
+						<th>{{ forloop.counter }}</th>
 						<th><a href="{% url 'room' item.id %}">{{ item }}</a></th>
 						<th>{{item.owner}}</th>
+                        {% if item.owner == username %}
 						<th><a href="{% url 'deleteRoom' item.id %}">X</a></th>
+                        {% endif %}
 					</tr>
 				{% endfor %}
 			</tbody>
@@ -150,30 +155,31 @@
 {% block model-define %}
 <div id="reply_box_list">
     {% for msg in newmsgs %}
-    <div class="modal fade" id="reply_box{{ forloop.counter }}" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" style="display: none;">
-                    <div class="modal-dialog">
-                        <div class="modal-content">
-                          <div class="modal-header">
-                                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-                                <h4>From: {{msg.sender}}</h4>
-                           </div>
-                           <div class="modal-body">
-                             <p>{{msg.timestamp}}</p>
-                             <p>{{msg.text}}</p>
-                            <form role="form" action="{% url 'send' msg.sender username %}" method="post">
-                                <input type="text" name="textarea1" style="width : 300px;" required>
-                                <button type="submit" class="btn btn-primary btn-sm">Reply</button>
-                               {% csrf_token %}
-                            </form>
-                           </div>
-                        </div>
-                    </div>
+    <div class="modal fade" id="reply_box{{ msg.id }}" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" style="display: none;">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+                    <h4>From: {{msg.sender}}</h4>
                 </div>
-        {% endfor %}
+                <div class="modal-body">
+                    <p>{{msg.timestamp}}</p>
+                    <p>{{msg.text}}</p>
+                    <form role="form" action="{% url 'reply' msg.sender username msg.id %}" method="post">
+                        <input type="text" name="textarea1" style="width : 300px;" required>
+                            <button type="submit" class="btn btn-primary btn-sm">Reply</button>
+                            <a href={% url 'dismiss' msg.id %} class="btn btn-primary btn-sm">Dismiss</a>
+                            {% csrf_token %}
+                            </form>
+                </div>
+            </div>
+        </div>
+    </div>
+    {% endfor %}
 </div>
 {% endblock %}
 
- {% block script-content %}   
+ {% block script-content %}
 <script src="/../static/js/jquery-1.11.2.js" type="text/javascript"></script>
 
 <script>
@@ -183,8 +189,12 @@ function updaterooms() {
 		    var rooms = data['rooms'];
             for (num in rooms) {
                 var room = rooms[num];
-                var html = '<tr><th>'+room.id+'</th><th><a href="/discussion/goRoom/'+room.id+'">'+room.roomname+'</a></th>\
-                <th>'+room.owner+'</th><th><a href="/discussion/delete/'+room.id+'">X</a></th></tr>';
+                var roomc = parseInt(num)+1
+                var html = '<tr><th>'+roomc+'</th><th><a href="/discussion/goRoom/'+room.id+'">'+room.roomname+'</a></th>\
+                <th>'+room.owner+'</th>';
+              if (room.owner == data['cur_username']) {
+                html += '<th><a href="/discussion/delete/'+room.id+'">X</a></th></tr>';
+              }
                 $('#roomlist').append(html);   
             }          
         });
