--- a/chingoal/testpage/templates/test-mc.html
+++ b/chingoal/testpage/templates/test-mc.html
@@ -1,3 +1,4 @@
+{% if finish == 0 %}
 <div class="form-group">{{item.question}}</div>
 <div class="form-group input-group">
     <span class="input-group-addon">A</span>
@@ -17,15 +18,20 @@
 </div>
 <label>Chooseing the correct answer</label>
 <label class="radio-inline">
-<input type="radio" name="optionsRadiosInline" id="optionsRadiosInline1" value="A" checked>A
+<input type="radio" name="answer" id="optionsRadiosInline1" value="A" >A
 </label>
 <label class="radio-inline">
-<input type="radio" name="optionsRadiosInline" id="optionsRadiosInline2" value="B">B
+<input type="radio" name="answer" id="optionsRadiosInline2" value="B">B
 </label>
 <label class="radio-inline">
-<input type="radio" name="optionsRadiosInline" id="optionsRadiosInline3" value="C">C
+<input type="radio" name="answer" id="optionsRadiosInline3" value="C">C
 </label>
 <label class="radio-inline">
-<input type="radio" name="optionsRadiosInline" id="optionsRadiosInline3" value="D">D
+<input type="radio" name="answer" id="optionsRadiosInline3" value="D">D
 </label>
 <br>
+<div style="color:red">{{form.answer.errors}}</div>
+{% endif %}
+{{form.max_entry}}
+{{form.qnum}}
+{{form.qid}}
