--- a/chingoal/testpage/templates/test-tr.html
+++ b/chingoal/testpage/templates/test-tr.html
@@ -1,17 +1,23 @@
+<div class="form-group">
+{% if finish == 0 %}
+    <div class="row">
+        <div class="col-lg-12">{{item.question}}</div>
+    </div>
+    <br>
+    <label>Input the answer content</label>
+    <!-- <input class="form-control" id="id_explanation" maxlength="200" name="explanation" placeholder="Explanation" type="text"> -->
+    <div class="row">
+        {% if form.answer.errors %}
+            <div class="col-lg-8">{{form.answer}}</div>
+            <div class="col-lg-4" style="color:red">{{form.answer.errors}}</div>
+        {% else %}
+            <div class="col-lg-12">{{form.answer}}</div>
+        {% endif %}
+        
 
-                    <div class="form-group">
-                        <div class="row">
-                            <div class="col-lg-12">{{item.question}}</div>
-                        </div>
-                        <br>
-                        <label>Input the answer content</label>
-                        <input class="form-control" id="id_explanation" maxlength="200" name="explanation" placeholder="Explanation" type="text">
-                        <div class="row">
-                            {% if form.explanation.errors %}
-                                <div class="col-lg-8">{{form.explanation}}</div>
-                                <div class="col-lg-4" style="color:red">{{form.explanation.errors}}</div>
-                            {% else %}
-                                <div class="col-lg-12">{{form.explanation}}</div>
-                            {% endif %}
-                        </div>
-                    </div>            
+    </div>
+{% endif %}
+        {{form.max_entry}}
+        {{form.qnum}}
+        {{form.qid}}
+</div>            
