--- a/chingoal/testpage/templates/testpage/test-feedback.html
+++ b/chingoal/testpage/templates/testpage/test-feedback.html
@@ -77,34 +77,56 @@
     <div class="row">
         <div class="col-lg-12">
         
-            <form id="storedata" action="{% url 'getresult' %}" method="post">
             <div id="question-container" class="panel panel-primary">                  
                 <div  id="phead" class="panel-heading">
-                    Question <p class="question-num" style="display:inline"></p> 
+                    Feed Back 
                 </div>
 
                 <div id="pbody" class="panel-body">
-                <input id="maxentry" type="hidden" name="max_entry" value="-1">
-                <input id="qnum" type="hidden" name="qnum" value="-1">
-                <input id="qid" type="hidden" name="qid" value="-1">
+                <ul id="questions" >
+                
+                {% for item in questionanswer %}
+                
+                <div class="answerfb">
+                <form id="storedata-{{item.qid}}">
+                    <input type="hidden" name="tid" value={{tid}}>
+                    <input type="hidden" name="qid" value={{item.qid}}>
+                    {% csrf_token %}
+                </form> 
+                {% if item.correctness == "True" %}
+                <div id="ul-{{item.qid}}" class="panel panel-success">                  
+                {% else %}
+                <div id="ul-{{item.qid}}" class="panel panel-danger">                  
+                {% endif %}
+                <div class="panel-heading">
+                    Question <p class="question-num" style="display:inline"></p> 
+                </div>
+
+                <div id="panel-{{item.qid}}" class="panel-body">
+               
+                </div>
+                <input type="hidden" name="qid" value="{{item.qid}}">
+                <div class="panel-footer">
+                Your Answer: {{item.answer}}
+                </div>
+
+                </div>
+                </div>
+                {% endfor %}
+
+                </ul>
+
+                
+
                 </div>
 
                 <div id="pfoot" class="panel-footer">
                     <div class="row">
-                        <div class="col-lg-3">
-                            <button type="button" class="btn btn-warning next-btn">Next</button>
-                        </div>
-                        <div class="col-lg-6">
-                            <div class="progress">
-                                <div id="processbar" class="progress-bar progress-bar-success progress-bar-striped active" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 0%;">0%</div>
-                            </div>
-                        </div>
-                        <div class="col-lg-3"></div>
+                        <button type="button" class="btn btn-warning next-btn">Next</button>
                     </div>
                 </div>
             </div>
-            {% csrf_token %}
-            </form> 
+          
                
                 </div>
                 <!-- /.col-lg-4 -->
@@ -143,11 +165,11 @@
     </footer>
  {% endblock %}
 
-    {% block origin-script %}
-    {% endblock %}
+{% block origin-script %}
+{% endblock %}
 
   
 {% block script-content %}
 {% load static %}
-<script src="{% static "js/test_question.js"%}"></script>
+<script src="{% static "js/test_feedback.js"%}"></script>
 {% endblock %}
