--- a/chingoal/testpage/templates/testpage/learn.html
+++ b/chingoal/testpage/templates/testpage/learn.html
@@ -78,7 +78,9 @@
                         <div class="row">
                             <div class="col-lg-2">
                                 <br>
+                                <a href="{% url 'audio' %}">
                                 <button class="btn btn-info">TIP</button>
+                                </a>
                             </div>
                             <div class="col-lg-8">
                                 <p>
