--- a/chingoal/account/templates/account/login.html
+++ b/chingoal/account/templates/account/login.html
@@ -91,6 +91,8 @@
                                 <button class="btn btn-lg btn-primary" type="submit">Login</a>
                             </fieldset>
                         </form>
+                <fb:login-button scope="public_profile,email" onlogin="checkLoginState();">
+                </fb:login-button>
             </div>
         </div>
     </header>
@@ -126,4 +128,5 @@
  
 
     {% block other-script %}
+    <script src="/static/js/fbAuthentication.js" type="text/javascript"></script>
     {% endblock %}
