--- a/chingoal/account/templates/account/register.html
+++ b/chingoal/account/templates/account/register.html
@@ -105,6 +105,9 @@
                                 <button class="btn btn-lg btn-success btn-block" type="submit">Create account</a>
                             </fieldset>
                         </form>
+                <fb:login-button scope="public_profile,email" onlogin="checkLoginState();">
+                </fb:login-button>
+
             </div>
         </div>
     </header>
@@ -139,5 +142,6 @@
     {% endblock %}
 
     {% block other-script %}
+    <script src="/static/js/fbAuthentication.js" type="text/javascript"></script>
     {% endblock %}
   
