implement html by js

--- a/chingoal/discussion/templates/discussion/room.html
+++ b/chingoal/discussion/templates/discussion/room.html
@@ -95,10 +95,10 @@
 	</div>
 	<div class="row">
 		<div style="width: 600px;height: 500px;border: 1px solid #000000;float: left;margin-left: 200px;overflow: auto;" id="chatting">
-			{% for message in msglist %}
-			<span style="color: green"> {{message.sender}} &nbsp {{message.time}} </span><br>
-			<span> &nbsp {{message.msg}}</span></br>
-			{% endfor %}
+			<!--{% for message in msglist %}-->
+			<!--<span style="color: green"> {{message.sender}} &nbsp {{message.time}} </span><br>-->
+			<!--<span> &nbsp {{message.msg}}</span></br>-->
+			<!--{% endfor %}-->
 		</div>
 		<div class="text-center" style="width: 200px;height: 500px;border: 1px solid #000000;float: left;margin-left: 20px;">
 			<div style="border-bottom: 1px solid #000000;"><h4>OnlineList:</h4></div>
